--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/tooltip": "^2.0.34",
     "chart.js": "^4.4.3",
     "d3": "^7.9.0",
+    "font-awesome": "^4.7.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
