--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    env:
+      TEST_BASE_URL: ${{secrets.TEST_BASE_URL}}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
