--- a/.github/workflows/test_app.yml
+++ b/.github/workflows/test_app.yml
@@ -5,8 +5,6 @@ on: [push]
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    env:
-      TEST_BASE_URL: ${{secrets.TEST_BASE_URL}}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -17,3 +15,4 @@ jobs:
         with:
           build: npm run build
           start: npm start
+          config: baseURL=${{secrets.TEST_BASE_URL}}
